# Compass

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Coordinate3D.js  DataSource.js  Feeder.cpp  Feeder.h  Pitch.qml  Pitchbak.qml  QMLDisplayConfig.cmake  README.md  SpacePath.js  SpacePath.qml  SpacePathbak.js  SpacePathbak_copy.js  TD.js  Test.qml  TestPitch.qml  WebDataFeeder.cpp  WebDataFeeder.h  compass.qml  config.h.in  data.cpp  data.h  dc_qml.qrc  dc_res.qrc  display.pro  display.pro.user.60db282  display.pro.user.ebf80fd  filecontent.cpp  filecontent.h  icon.rc  libdisplay.pri  libdisplay.pro  libdisplayqml.pri  libdisplayqml.pro  main.cpp  main2.qml  process_index.py  (+4 more)
cmake/: DisplayCompassConfig.cmake.in  windows_metafile.rc.in
compassvue/: .babelrc  README.md  compass.config.js  package.json  vue.config.js
compassvue/public/: index.html
compassvue/src/: App.vue  main.js  states.js
compassvue/src/assets/: SPFragCode.fsh  SPVertexCode.vsh  hprfeedapp.py
compassvue/src/compass/: Coord.js  Craft.js  PaintObj.js  Scene.js  SensorPoint.js  SpacePath.js  Sphere.js  Variables.js
compassvue/src/components/: CameraSetting.vue  CraftSetting.vue  DebugPanel.vue  Information.vue  Sidebar.vue  SphereSetting.vue
deprecated/: filecontent.cpp  filecontent.h
examples/DataTransfer/: DataTransfer.pro  MainWindow.cpp  MainWindow.h  main.cpp
examples/QMLDataTransfer/: BAboutDialog.cpp  BAboutDialog.h  CMakeLists.txt  DataTransfer.cpp  DataTransfer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QMLDataTransfer.pro  config.h.in  main.cpp  res.qrc
examples/QMLDataTransfer/cmake/: QtCommon.cmake  windows_metafile.rc.in
examples/QMLDataTransfer/src/: BAboutDialog.cpp  BAboutDialog.h  BAboutDialog.ui  DataTransfer.cpp  DataTransfer.h  MainWindow.cpp  MainWindow.h  main.cpp
examples/SharedMemoryDataGenerator/: DataGenerator.cpp  DataGenerator.h  SharedMemoryDataGenerator.pro  main.cpp
examples/SharedMemoryTransfer/: MainWindow.cpp  MainWindow.h  SharedMemoryTransfer.pro  main.cpp
examples/TestLibDisplayer/: MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  TestLibDisplayer.pro
feature/: libdisplayqml.prf
html/: index.html
html/js/: index.1a541b9e.js  index.1a541b9e.js.map  index.b44a178c.js  index.b44a178c.js.map  index.e35c2ea8.js  index.e35c2ea8.js.map
include/: Animation.h  AnimationDataObject.h  DisplayQmlInterface.h  Displayer3d.h  LibDisplayQml.h  QuickViewData.h  TestFeeder.h  WebDataFeeder.h  display_global.h
qml/: Button.qml  Compass.qml  Coordinate3D.js  DataSource.js  MySlider.qml  PaintObj.js  Pitch.qml  SPFragCode.fsh  SPVertexCode.vsh  ScrollBar.qml  SpacePath-bak0411.js  SpacePath.js  SpacePath.qml  SpacePathHUD.js  SpacePathHUD.qml  SpacePathNormal.js  SpacePathUnoptimized.js  SpacePath_copy.js  SpacePathbak.js  TD.js  TD.qml  Test.qml  Timer.qml  echarts.js  gl-matrix.js  main.qml  square.js  webgl-obj-loader.js
res/: libdisplayqml.json
src/: Animation.cpp  Displayer3d.cpp  LibDisplayQml.cpp  QuickViewData.cpp  TestFeeder.cpp  WebDataFeeder.cpp
webview/: display3d.rcc  webcompass.pri  webcompass.pro
webview/compassvue/: vue.config.js
webview/compassvue/public/: index.html
webview/compassvue/src/: App.vue  main.js  states.js
webview/compassvue/src/assets/: SPFragCode.fsh  hprfeedapp.py
webview/compassvue/src/compass/: Coord.js  Craft.js  QtSpacePath.js  Scene.js  SensorPoint.js  SpacePath.js
webview/compassvue/src/components/: CameraSetting.vue  DebugPanel.vue
webview/examples/DataTransfer/: DataTransfer.pro  MainWindow.h  MainWindow.ui
webview/examples/SharedMemoryTransfer/: MainWindow.h  SharedMemoryTransfer.pro
webview/html/: index.html
webview/html/js/: gl-matrix-min.js
webview/include/: display_global.h
webview/src/: Displayer3d.cpp  TestFeeder.cpp
